====================
2018/4/26
v 5-0.421

- Added support for execute-with-alternative-super-variable ("xwsv").
- Bumped up COPPER_LANG_VERSION to 2.3 to reflect addition of execute-with-alternative-super function.
- Fixed typo in #ifdef in VarAddress::first().

EngineMsgToStr
- Updated with error messages for execute-width-alternative-super errors.

docs
- Updated


====================
2018/4/7 - 2018/4/26
v 5-0.42

- Changed Opcode::ConditionalGoto case in Engine::operate() to return an error instead of treating it as false.
- Bumped up COPPER_LANG_VERSION to 2.2 to reflect change in if-statements.
- Fixed bug in Body::compile_internal that caused parsing to stop (stream completed before parsing) even for valid input without a statement ending.


====================
2018/3/13 - 2018/3/14
v 5-0.41

- Cleaned up utilList.h.
- Fixed identical bug in Engine::resolveVariableAddress() and Engine::setupUserFunctionExecution() that failed to create member variables when the base was found in the global scope but not the full address.

index.html
- Name changed to o-index.html

Imported documentation from Copper Slate docs project.


====================
2018/3/10
v 5-0.401

- Made the Engine::print functions private. (These may change or be replaced.)
- Bumped up COPPER_LANG_VERSION to 2.1 to reflect the addition of lists and string functions.


====================
2018/3/3 - 2018/3/5
v 5-0.4

- Added #define COPPER_DEBUG_ADDRESS.
- Fixed bug (from as early as Cheetah) that incorrectly added to the address name when parsing had to resume. (a.b became a.b.b and then a.b.b.b with every cycle).
-- Fix entails Engine::interpretToken, case TT_Name now ALWAYS committing the token usage.
-- Fix entails Engine::parseFuncFoundTask() now no longer skipping a token but instead committing usage after each part of a name is collected.
- Fixed bug in ObjectList::gotoIndex() that compared incorrect distances when determining if the selector should go to the tail.